docs/04-Android/older/2.3.0/player/player-api/player-api/com.deezer.sdk.player.model.context/-deezer-context-type/index.md
//[player-api](../../../index.md)/[com.deezer.sdk.player.model.context](../index.md)/[DeezerContextType](index.md)

# DeezerContextType

[androidJvm]\
enum [DeezerContextType](index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[DeezerContextType](index.md)&gt;

Represents the type of the origin (aka context) of a playable content

## Entries

|                                                           |                                                                              |
| --------------------------------------------------------- | ---------------------------------------------------------------------------- |
| [LIVESTREAM](-l-i-v-e-s-t-r-e-a-m/index.md)               | [androidJvm]<br/>[LIVESTREAM](-l-i-v-e-s-t-r-e-a-m/index.md)()               |
| [RADIO](-r-a-d-i-o/index.md)                              | [androidJvm]<br/>[RADIO](-r-a-d-i-o/index.md)()                              |
| [TALK](-t-a-l-k/index.md)                                 | [androidJvm]<br/>[TALK](-t-a-l-k/index.md)()                                 |
| [TRACK](-t-r-a-c-k/index.md)                              | [androidJvm]<br/>[TRACK](-t-r-a-c-k/index.md)()                              |
| [PLAYLIST](-p-l-a-y-l-i-s-t/index.md)                     | [androidJvm]<br/>[PLAYLIST](-p-l-a-y-l-i-s-t/index.md)()                     |
| [ALBUM](-a-l-b-u-m/index.md)                              | [androidJvm]<br/>[ALBUM](-a-l-b-u-m/index.md)()                              |
| [SMART_TRACKLIST](-s-m-a-r-t_-t-r-a-c-k-l-i-s-t/index.md) | [androidJvm]<br/>[SMART_TRACKLIST](-s-m-a-r-t_-t-r-a-c-k-l-i-s-t/index.md)() |
| [FLOW](-f-l-o-w/index.md)                                 | [androidJvm]<br/>[FLOW](-f-l-o-w/index.md)()                                 |

## Properties

| Name                                                               | Summary                                                                                                                                                                |
| ------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [name](-f-l-o-w/index.md#-372974862%2FProperties%2F-1037426161)    | [androidJvm]<br/>val [name](-f-l-o-w/index.md#-372974862%2FProperties%2F-1037426161): [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html) |
| [ordinal](-f-l-o-w/index.md#-739389684%2FProperties%2F-1037426161) | [androidJvm]<br/>val [ordinal](-f-l-o-w/index.md#-739389684%2FProperties%2F-1037426161): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html)    |
